--- a/core/package.json
+++ b/core/package.json
@@ -6,7 +6,16 @@
   "repository": "https://github.com/guesant/vector-awesome.git",
   "author": "Gabriel Rodrigues <jipacoding@gmail.com>",
   "license": "MIT",
-  "dependencies": {
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.8",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.20",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "typescript": "^4.2.2"
   }
 }
