--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["./src/**/*"],
+  "exclude": ["**/*.test.ts"],
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
@@ -6,7 +8,7 @@
     "declaration": true,
     "strict": true,
     "rootDir": "./src",
-    "outFile": "./dist",
+    "outDir": "./dist",
     "strictNullChecks": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
